<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/swipeRevealLayout"
    android:layout_width="match_parent"
    android:layout_height="120dp"
    app:mode="same_level"
    app:dragEdge="left">

    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@color/red">

        <TextView
            android:id="@+id/delete"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="حذف الاعلان"
            android:padding="@dimen/d10"
            android:textSize="@dimen/dt16"
            android:textColor="@color/white"
            android:src="@drawable/ic_action_remove" />

    </FrameLayout>

    <LinearLayout
        android:id="@+id/single_click"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/d3"
        android:layout_marginBottom="5dp"
        android:background="@drawable/ripple_effect"
        android:clickable="true"
        android:focusable="true"
        android:gravity="center"
        android:orientation="horizontal"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginStart="@dimen/dt10"
            android:layout_weight="0.5"
            android:gravity="center_vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:gravity="start"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/item_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start"
                    android:layout_marginTop="10dp"
                    android:maxLines="2"
                    android:paddingStart="@dimen/dt10"
                    android:text="title"
                    android:textColor="@color/green"
                    android:textSize="17sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:id="@+id/item_user_postedby_layout"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/d5"
                    android:visibility="gone">


                    <ImageView
                        android:layout_width="15dp"
                        android:layout_height="15dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dt10"
                        android:src="@drawable/user" />

                    <TextView
                        android:id="@+id/item_user_postedby"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginStart="5dp"
                        android:text="@string/user_name"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/post_date_lay"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/item_title"
                    android:layout_gravity="start"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start|center"
                        android:layout_weight="1">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:layout_marginStart="@dimen/dt10"
                            android:layout_marginEnd="5dp"
                            android:src="@drawable/ic_clock" />

                        <TextView
                            android:id="@+id/date"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:text="@string/posted_on"
                            android:textSize="13sp"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="@dimen/d15"
                        android:layout_weight="1"
                        android:gravity="start|center"
                        android:visibility="gone">

                        <ImageView
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="center"
                            android:src="@drawable/ic_clock" />

                        <TextView
                            android:id="@+id/item_posted_on"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:layout_marginEnd="5dp"
                            android:text="@string/posted_on"
                            android:textSize="13sp" />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="start|center"
                    android:layout_marginTop="@dimen/d5"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:layout_gravity="center"
                        android:layout_marginStart="@dimen/dt10"
                        android:layout_marginEnd="5dp"
                        android:src="@drawable/ic_location" />

                    <TextView
                        android:id="@+id/item_location"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:gravity="bottom"
                        android:text="@string/location"
                        android:textSize="13sp"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>

        </LinearLayout>

        <RelativeLayout
            android:layout_width="0dp"
            android:layout_height="150dp"
            android:layout_weight=".5"
            android:gravity="center_vertical|end">

            <ImageView
                android:id="@+id/item_image"
                android:layout_width="@dimen/d120"
                android:layout_height="@dimen/d120"
                android:padding="@dimen/dt10"
                android:scaleType="centerCrop"
                android:src="@drawable/dogs" />

            <ImageView
                android:id="@+id/item_fav_image"
                android:layout_width="32dp"
                android:layout_height="32dp"
                android:layout_alignParentStart="true"
                android:layout_margin="@dimen/d15"
                android:src="@drawable/ic_heart"
                android:visibility="gone"
                app:tint="@color/white" />

        </RelativeLayout>

    </LinearLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>